--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -7,3 +7,9 @@
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_CENTRAL=y
+CONFIG_BT_DEVICE_NAME="MyKeyboard"
+CONFIG_BT_DEVICE_APPEARANCE=961
