--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -5,11 +5,8 @@
 # Uncomment the following line to enable the Lily58 OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_SLEEP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_BT=y
-CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_CENTRAL=y
-CONFIG_BT_DEVICE_NAME="MyKeyboard"
-CONFIG_BT_DEVICE_APPEARANCE=961
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN
+
