--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -9,3 +9,9 @@ CONFIG_ZMK_SLEEP=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # CONFIG_ZMK_BLE_EXPERIMENTAL_CONN
+
+CONFIG_BT_PERIPHERAL=y
+
+CONFIG_BT_SCAN=y
+
+CONFIG_BT_ADVERTISE=y
