--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -5,3 +5,4 @@
 # Uncomment the following line to enable the Lily58 OLED Display
 # CONFIG_ZMK_DISPLAY=y
 # CONFIG_BT_PERIPHERAL=y
+CONFIG_ZMK_UNICODE=y
