--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -5,4 +5,6 @@
 # Uncomment the following line to enable the Lily58 OLED Display
 # CONFIG_ZMK_DISPLAY=y
 # CONFIG_BT_PERIPHERAL=y
-# CONFIG_ZMK_UNICODE=y
+
+CONFIG_ZMK_UNICODE=y
+CONFIG_ZMK_UNICODE_WINC=y
