--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -8,3 +8,7 @@
 
 CONFIG_ZMK_UNICODE=y
 CONFIG_ZMK_UNICODE_WINC=y
+
+# Unicode timing (если будут "ломаться" последовательности — увеличь ещё)
+CONFIG_ZMK_UNICODE_TAP_MS=10
+CONFIG_ZMK_UNICODE_WAIT_MS=5
